<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:gravity="center_horizontal"
                                                   android:orientation="vertical"
                                                   android:paddingBottom="@dimen/activity_vertical_margin"
                                                   android:paddingLeft="@dimen/activity_horizontal_margin"
                                                   android:paddingRight="@dimen/activity_horizontal_margin"
                                                   android:paddingTop="@dimen/activity_vertical_margin"
                                                   tools:context=".LoginActivity">

    <!-- Login progress -->

    <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/login_form"
            app:layout_constraintEnd_toEndOf="@+id/login_form" app:layout_constraintBottom_toTopOf="@+id/textView"/>
    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/email_sign_in_button">

        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/login_form"
            app:layout_constraintEnd_toEndOf="@+id/login_form"
            app:layout_constraintTop_toBottomOf="@+id/pb_login"/>
    <TextView
            android:text="@string/promote_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="@+id/email_sign_in_button"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/tv_link_regis"
            app:layout_constraintHorizontal_chainStyle="packed" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="4dp" android:layout_marginRight="4dp"/>
    <TextView
            android:text="@string/link_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_link_regis"
            app:layout_constraintBottom_toBottomOf="@+id/textView" app:layout_constraintTop_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/email_sign_in_button" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.5"/>

    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/pb_login"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            android:indeterminate="true"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>